Add contact details

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -32,8 +32,8 @@
             <div class="contact-info">
                 <p><strong>Audio Guide</strong><br>
                 D.o.o Ablest, Montenegro<br>
-                Email: <br>
-                Phone: [your-contact-phone]</p>
+                Email: info@ablest.me <br>
+                Phone: +382 69 611 696</p>
             </div>
         </section>
 
