--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -145,7 +145,7 @@
                 <li><strong>Right to Object:</strong> Object to processing based on legitimate interests</li>
                 <li><strong>Right to Withdraw Consent:</strong> Withdraw your consent at any time (without affecting prior processing)</li>
             </ul>
-            <p>To exercise any of these rights, please contact us at [your-contact-email]. We will respond to your request within 30 days.</p>
+            <p>To exercise any of these rights, please contact us at info@ablest.me. We will respond to your request within 30 days.</p>
         </section>
 
         <section>
@@ -183,9 +183,8 @@
             <h2>13. Contact Us</h2>
             <p>If you have any questions, concerns, or requests regarding this privacy policy or our data practices, please contact us:</p>
             <div class="contact-info">
-                <p><strong>Email:</strong> [your-contact-email]<br>
-                <strong>Address:</strong> [Your Company Address]<br>
-                <strong>Data Protection Officer:</strong> [DPO contact if applicable]</p>
+                <p><strong>Email:</strong> info@ablest.me<br>
+                <strong>Address:</strong> D.o.o. Ablest, Ul. Velimira Terzića 5, Podgorica, Montenegro
             </div>
         </section>
 
