Added delete account instructions and updated css

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <title>Privacy Policy for ABook</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1>Privacy Policy for ABook</h1>
+  <div class="container">
+    <h1>Privacy Policy for ABook</h1>
 <p><strong>Last updated:</strong> December 21, 2025</p>
 
 <p>
@@ -135,5 +136,9 @@ For questions or requests regarding privacy:
 <strong>Email:</strong> <a href="mailto:info@ablest.me">info@ablest.me</a>
 </p>
 
+    <div class="footer">
+      <a href="index.html">Back to Home</a>
+    </div>
+  </div>
 </body>
 </html>
