--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h2>Documentation</h2>
             <ul>
                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="delete-abook-account.html">Delete ABook Account</a></li>
             </ul>
         </section>
     </main>
