Improved landing page

--- a/index.html
+++ b/index.html
@@ -3,35 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Guide - Documentation</title>
+    <title>ABook - Your Audiobook Companion</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Audio Guide</h1>
-            <p>Your personal audio tour companion</p>
-        </div>
-    </header>
-
-    <main class="container">
-        <section class="intro">
-            <h2>Welcome</h2>
-            <p>Audio Guide is a mobile application available for iOS and Android that enhances your travel experience with personalized audio tours.</p>
-        </section>
-
-        <section class="links">
-            <h2>Documentation</h2>
-            <ul>
-                <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                <li><a href="delete-abook-account.html">Delete ABook Account</a></li>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="container nav-container">
+            <div class="logo">
+                <img src="logo-square.png" alt="ABook Logo">
+                <span>ABook</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#features">Features</a></li>
+                <li><a href="#download">Download</a></li>
+                <li><a href="privacy-policy.html">Privacy</a></li>
             </ul>
-        </section>
-    </main>
+        </div>
+    </nav>
 
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Discover Stories That Speak to You</h1>
+            <p class="hero-subtitle">Immerse yourself in thousands of audiobooks, anytime, anywhere</p>
+            <div class="cta-buttons">
+                <a href="#download" class="btn btn-primary">Get Started Free</a>
+                <a href="#features" class="btn btn-secondary">Learn More</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="AbookBanner1.jpg" alt="ABook App Preview">
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features">
+        <div class="container">
+            <h2>Why Choose ABook?</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">📚</div>
+                    <h3>Vast Library</h3>
+                    <p>Access thousands of audiobooks across every genre imaginable</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Offline Listening</h3>
+                    <p>Download your favorites and listen without an internet connection</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🎯</div>
+                    <h3>Personalized Recommendations</h3>
+                    <p>Discover new books tailored to your unique taste</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🔄</div>
+                    <h3>Sync Across Devices</h3>
+                    <p>Pick up right where you left off on any device</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">⏱️</div>
+                    <h3>Variable Speed</h3>
+                    <p>Control playback speed to match your listening preference</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🌙</div>
+                    <h3>Sleep Timer</h3>
+                    <p>Fall asleep to your favorite stories with our built-in timer</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- App Preview Section -->
+    <section class="app-preview">
+        <div class="container">
+            <div class="preview-content">
+                <h2>Your Library, Always With You</h2>
+                <p>Experience seamless listening with our beautifully designed app. Browse, download, and enjoy your favorite audiobooks with an interface built for book lovers.</p>
+                <ul class="preview-list">
+                    <li>✓ Beautiful, intuitive interface</li>
+                    <li>✓ Smart bookmarking and notes</li>
+                    <li>✓ Customizable playback settings</li>
+                    <li>✓ CarPlay and Android Auto support</li>
+                </ul>
+            </div>
+            <div class="preview-image">
+                <img src="AbookBanner3.jpg" alt="ABook Features">
+            </div>
+        </div>
+    </section>
+
+    <!-- Download Section -->
+    <section id="download" class="download">
+        <div class="container">
+            <h2>Start Listening Today</h2>
+            <p class="download-subtitle">Available on iOS and Android</p>
+            <div class="download-buttons">
+                <a href="#" class="store-button">
+                    <div class="store-icon">🍎</div>
+                    <div class="store-text">
+                        <span class="small">Download on the</span>
+                        <span class="large">App Store</span>
+                    </div>
+                </a>
+                <a href="#" class="store-button">
+                    <div class="store-icon">🤖</div>
+                    <div class="store-text">
+                        <span class="small">Get it on</span>
+                        <span class="large">Google Play</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Audio Guide. All rights reserved.</p>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h4>ABook</h4>
+                    <p>Your personal audiobook companion</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="delete-abook-account.html">Delete Account</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 ABook. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 </body>
