--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABook - Your Audiobook Companion</title>
+    <title>abook - Your Audiobook Companion</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
-            <div class="logo">
-                <img src="logo-square.png" alt="ABook Logo">
-                <span>ABook</span>
-            </div>
+            <a href="index.html" class="logo">
+                <img src="logo-square.png" alt="abook Logo">
+                <span>abook</span>
+            </a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#download">Download</a></li>
@@ -24,23 +24,25 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-content">
-            <h1>Discover Stories That Speak to You</h1>
-            <p class="hero-subtitle">Immerse yourself in thousands of audiobooks, anytime, anywhere</p>
-            <div class="cta-buttons">
-                <a href="#download" class="btn btn-primary">Get Started Free</a>
-                <a href="#features" class="btn btn-secondary">Learn More</a>
+        <div class="container hero-container">
+            <div class="hero-content">
+                <h1>Discover Stories That Speak to You</h1>
+                <p class="hero-subtitle">Immerse yourself in thousands of audiobooks, anytime, anywhere</p>
+                <div class="cta-buttons">
+                    <a href="#download" class="btn btn-primary">Get Started Free</a>
+                    <a href="#features" class="btn btn-secondary">Learn More</a>
+                </div>
             </div>
         </div>
-        <div class="hero-image">
-            <img src="AbookBanner1.jpg" alt="ABook App Preview">
+        <div class="hero-image-full">
+            <img src="AbookBanner1.jpg" alt="abook App Preview">
         </div>
     </section>
 
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h2>Why Choose ABook?</h2>
+            <h2>Why Choose abook?</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">📚</div>
@@ -48,24 +50,9 @@
                     <p>Access thousands of audiobooks across every genre imaginable</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3>Offline Listening</h3>
-                    <p>Download your favorites and listen without an internet connection</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🎯</div>
-                    <h3>Personalized Recommendations</h3>
-                    <p>Discover new books tailored to your unique taste</p>
-                </div>
-                <div class="feature-card">
                     <div class="feature-icon">🔄</div>
                     <h3>Sync Across Devices</h3>
                     <p>Pick up right where you left off on any device</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⏱️</div>
-                    <h3>Variable Speed</h3>
-                    <p>Control playback speed to match your listening preference</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🌙</div>
@@ -90,7 +77,7 @@
                 </ul>
             </div>
             <div class="preview-image">
-                <img src="AbookBanner3.jpg" alt="ABook Features">
+                <img src="AbookBanner3.jpg" alt="abook Features">
             </div>
         </div>
     </section>
@@ -101,19 +88,11 @@
             <h2>Start Listening Today</h2>
             <p class="download-subtitle">Available on iOS and Android</p>
             <div class="download-buttons">
-                <a href="#" class="store-button">
-                    <div class="store-icon">🍎</div>
-                    <div class="store-text">
-                        <span class="small">Download on the</span>
-                        <span class="large">App Store</span>
-                    </div>
+                <a href="#" class="store-badge">
+                    <img src="available-on-the-app-store.svg" alt="Download on the App Store">
                 </a>
-                <a href="#" class="store-button">
-                    <div class="store-icon">🤖</div>
-                    <div class="store-text">
-                        <span class="small">Get it on</span>
-                        <span class="large">Google Play</span>
-                    </div>
+                <a href="#" class="store-badge">
+                    <img src="Google_Play-Badge-Logo.wine.svg" alt="Get it on Google Play">
                 </a>
             </div>
         </div>
@@ -124,7 +103,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4>ABook</h4>
+                    <h4>abook</h4>
                     <p>Your personal audiobook companion</p>
                 </div>
                 <div class="footer-section">
@@ -143,7 +122,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 ABook. All rights reserved.</p>
+                <p>&copy; 2026 abook. All rights reserved.</p>
             </div>
         </div>
     </footer>
