--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,18 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy for ABook</title>
+  <title>Privacy Policy - abook</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="container nav-container">
+            <a href="index.html" class="logo">
+                <img src="logo-square.png" alt="abook Logo">
+                <span>abook</span>
+            </a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="delete-abook-account.html">Delete Account</a></li>
+            </ul>
+        </div>
+    </nav>
+
+  <!-- Content Section -->
+  <section class="content-page">
   <div class="container">
-    <h1>Privacy Policy for ABook</h1>
+    <h1>Privacy Policy for abook</h1>
 <p><strong>Last updated:</strong> December 21, 2025</p>
 
 <p>
-This Privacy Policy explains how ABook ("we", "us", "our") collects, uses, and protects
-personal data when you use the ABook application ("Service").
+This Privacy Policy explains how abook ("we", "us", "our") collects, uses, and protects
+personal data when you use the abook application ("Service").
 </p>
 
 <p>By using the Service, you agree to this Privacy Policy.</p>
@@ -22,7 +38,7 @@ personal data when you use the ABook application ("Service").
 
 <h2>1. Definitions</h2>
 <ul>
-  <li><strong>Application</strong>: ABook mobile application</li>
+  <li><strong>Application</strong>: abook mobile application</li>
   <li><strong>Company</strong>: ABlest d.o.o., Ul. Velimira Terzića 5, Podgorica, Montenegro</li>
   <li><strong>Personal Data</strong>: Information that identifies or can identify an individual</li>
   <li><strong>Usage Data</strong>: Data collected automatically through use of the Service</li>
@@ -135,10 +151,36 @@ For questions or requests regarding privacy:
 <p>
 <strong>Email:</strong> <a href="mailto:info@ablest.me">info@ablest.me</a>
 </p>
-
-    <div class="footer">
-      <a href="index.html">Back to Home</a>
-    </div>
   </div>
+  </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h4>abook</h4>
+                    <p>Your personal audiobook companion</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="delete-abook-account.html">Delete Account</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 abook. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
