--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <li><a href="#features" data-i18n="nav.features">Features</a></li>
                 <li><a href="#download" data-i18n="nav.download">Download</a></li>
                 <li><a href="privacy-policy.html" data-i18n="nav.privacy">Privacy</a></li>
-                <li><button id="lang-toggle" class="lang-toggle">ME</button></li>
+                <li><button id="lang-toggle" class="lang-toggle">🌐 <span>ME</span></button></li>
             </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container hero-container">
+        <div class="container hero-grid">
             <div class="hero-content">
                 <h1 data-i18n="hero.title">Discover Stories That Speak to You</h1>
                 <p class="hero-subtitle" data-i18n="hero.subtitle">Immerse yourself in thousands of audiobooks, anytime, anywhere</p>
@@ -34,9 +34,9 @@
                     <a href="#features" class="btn btn-secondary" data-i18n="hero.ctaSecondary">Learn More</a>
                 </div>
             </div>
-        </div>
-        <div class="hero-image-full">
-            <img src="AbookBanner1.jpg" alt="abook App Preview">
+            <div class="hero-image">
+                <img src="AbookBanner1.jpg" alt="abook App Preview">
+            </div>
         </div>
     </section>
 
