--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" data-i18n="nav.home">Home</a></li>
                 <li><a href="delete-abook-account.html" data-i18n="nav.deleteAccount">Delete Account</a></li>
-                <li><button id="lang-toggle" class="lang-toggle">ME</button></li>
+                <li><button id="lang-toggle" class="lang-toggle">🌐 <span>ME</span></button></li>
             </ul>
         </div>
     </nav>
