--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="2lV7dibjnUJlLhk7n3Dwurvwscn-DyU7cFOoncCdhHg" />
     <title>abook - Your Audiobook Companion</title>
     <link rel="stylesheet" href="styles.css">
 </head>
